--- a/views/zemlje.pug
+++ b/views/zemlje.pug
@@ -31,7 +31,7 @@ block content
                     .card.z-depth-2
                         .card-image.sliphover-target(data-caption=`<a class="modal-trigger sliphover-options" href='#${vino.slug}'><div class="sliphover-wrapper"><p>${vino.naziv}</p></div></a>`)
                             a.modal-trigger(href=`#${vino.slug}`)
-                                img(src=`/images/${vino.slika || 'slika.jpg'}` )
+                                img(src=`/images/vina-thumbs/${vino.slika || 'slika.jpg'}` )
                             .korisnik
                                 a(href=`/korisnici/${vino.ime}`)
                                     p.card-ime= vino.ime
@@ -45,7 +45,7 @@ block content
 
                 div(id= vino.slug data-keyboard="false").modal.modal-fixed-footer.vino-modal    
                     .slika-fullscreen
-                        img(src=`/images/${vino.slika || 'slika.jpg'}`)      
+                        img(src=`/images/vina-big/${vino.slika || 'slika.jpg'}`)      
                         .btn-floating.red.modal-close.btn-large.waves-effect.waves-light#slika-close
                             i.material-icons clear                        
 
@@ -53,7 +53,7 @@ block content
                         
                         .grid-container
                             .slika.slika-trigger 
-                                img.modal-slika(src=`/images/${vino.slika || 'slika.jpg'}`)
+                                img.modal-slika(src=`/images/vina-big/${vino.slika || 'slika.jpg'}`)
                             .tekst1
                                 .row
                                     
