--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,6 +21,8 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        meta(name="keywords" content="vina,sava,nedo,kolekcija,vino,nedin,mutevelic")
+        meta(name="description" content="Nedin Mutevelić, moja kolekcija vina")
         
         
 
