--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
-    .container
-        .row
-            h1 OVO JE INDEX!!!
+    .background-img
+
+        - var number = Math.floor( Math.random() * 2 )
+        img.bg-img(src=`./images/background${number}.jpg`)
